<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_menu_camera"-->
<!--            android:title="@string/menu_home" />-->
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_add_grey_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_subscribe"
            android:icon="@drawable/ic_folder_grey_24"
            android:title="@string/subscribe" />
        <item
            android:id="@+id/nav_episodes"
            android:icon="@drawable/ic_feed_grey_24"
            android:title="@string/episodes" />
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/ic_settings_grey_24"-->
<!--            android:title="@string/setting" />-->
    </group>
</menu>
