<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/white"
    android:weightSum="3"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/llDiscover"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/ivDiscover"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/btn_home_page"/>

        <TextView
            android:id="@+id/tvDiscover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/discover"
            android:textColor="@drawable/bottom_navigation_bar_radio_color"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLibrary"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/ivLibrary"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:contentDescription="@string/app_name"
            android:padding="2dp"
            android:src="@drawable/btn_library" />

        <TextView
            android:id="@+id/tvLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/library"
            android:textColor="@drawable/bottom_navigation_bar_radio_color"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPersonal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/ivPersonal"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:contentDescription="@string/app_name"
            android:padding="1dp"
            android:src="@drawable/btn_personal" />

        <TextView
            android:id="@+id/tvPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/personal"
            android:textColor="@drawable/bottom_navigation_bar_radio_color"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>